<resources>
    <string name="app_name">My Application</string>
    <string name="tugas">Tugas</string>
    <string name="date">date</string>
    <string name="select_all">Select All</string>
    <string name="delete">Delete</string>
    <string name="isi_tugas_hint">Isi Tugas</string>
    <string name="tanggal_tugas">Tanggal Tugas</string>
    <string name="tambah_btn">Tambah</string>
</resources>