<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:padding="24dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="Tambah Tugas"
        android:layout_weight="1"
        android:textAlignment="center"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/black"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_task"
        android:layout_marginBottom="12dp"
        android:hint="@string/isi_tugas_hint"
        android:textSize="20sp"
        android:inputType="text"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_tanggal"
            android:hint="@string/tanggal_tugas"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_weight="6"/>
        <ImageView
            android:layout_width="48dp"
            android:layout_height="40dp"
            android:scaleType="fitXY"
            android:id="@+id/date_picker_img"
            android:layout_weight="1"
            android:clickable="true"
            android:src="@drawable/ic_baseline_date_range_24"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tambah_btn"
        android:id="@+id/add_task"/>
</LinearLayout>