<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/NoActionBar"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:background="@color/teal_700"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/count_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/tugas"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:paddingLeft="32dp"
                android:layout_weight="20"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:gravity="center_horizontal" />
            <ImageView
                android:id="@+id/add_item"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="fitXY"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_add_24"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_task"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp"
            tools:listitem="@layout/item_list_todo"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:layout_weight="4"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_all"
            android:layout_marginRight="8dp"
            android:id="@+id/btn_select"
            android:layout_weight="1"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/delete"
            android:id="@+id/btn_delete"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>